--- a/index.html
+++ b/index.html
@@ -613,6 +613,10 @@
                         <div class="option-title">Dark Fork 🍝</div>
                         <div class="option-desc">Upscale Italian cuisine with a modern twist</div>
                     </div>
+                    <div class="option-item" data-restaurant="koena">
+                        <div class="option-title">Koena Spa 💆‍♀️</div>
+                        <div class="option-desc">Luxury spa experience with dinner service</div>
+                    </div>
                 </div>
                 <div class="step-buttons">
                     <div></div> <!-- Empty div for spacing -->
